@@ -108,6 +108,7 @@ easier to use. The changes are:
 - CLJR encoder
 - Dxtory capture format decoder
 - v410 QuickTime uncompressed 4:4:4 10-bit encoder and decoder
+- OpenMG Audio muxer
 
 
 version 0.7:
